# sirvana-eats

./: .env.dev  .gitignore  concurrent_scraper.py  get_cookies_ubication_by_page.py  ldjson.py  products.json  pyproject.toml  requirements.txt  restaurants.json  restaurants2.json  restaurants_by_category.json  scrape_categories.py  scrape_product.py  scrape_products_concurrent.py  scrape_restaurans_by_ubication.py  scraped_data.json  update_products.py
sdjah/: .gitignore  README.md  flake.nix  pyproject.toml
sdjah/nix/: workspace.nix
sdjah/nix/checkout/: devshell.nix  workspace.nix
