[tool.poetry]
name = "sirvana-eats"
version = "0.1.0"
package-mode = false
description = "Script to update product availability in Sirvana database"
authors = ["Sirvana Team"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
